# context-engine-cpp

./: .em-config  .em-config_sanity_wasm  .gitignore  CMakeLists.txt  README.md  build.sh  build_type.sh  build_wasm.sh  compile.sh  context-engine.cpp  context-engine.hpp  test.cpp
assets/: readme.txt  test.txt
cmake/modules/: FindSDL2.cmake  FindSDL2_ttf.cmake
typing/: README.md  build.sh  context-engine.hpp  typing_test.cpp
